--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ hs_err_pid*
 # Gradle
 **/.gradle
 **/build/
+!.gradlew/wrapper/gradle-wrapper.jar
 
 # IntelliJ
 **/.idea
-*.iml
 **/out
 
 # Eclipse
