--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-2019, macos-10.15]
+        os: [ubuntu-20.04, windows-2019, macos-10.15, macos-11]
         java: [8, 11]
-        gradle: [6.8.2]
+        gradle: [6.9.1]
         experimental: [false]
     runs-on: ${{ matrix.os }}
     steps:
