--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,14 @@ jobs:
         gradle: [6.9.1]
         experimental: [false]
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.experimental }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
       - uses: actions/cache@v2
+        id: cache-gradle
         with:
           path: |
             ~/.gradle/caches
@@ -27,3 +29,7 @@ jobs:
         with:
           gradle-version: ${{ matrix.gradle }}
           arguments: buildAll --parallel --stacktrace
+      - id: print-jvm-crash-logs
+        if: ${{ failure() }}
+        run: cat hs_err_pid*.log; cat **/hs_err_pid*.log; cat replay_pid*.log; cat **/replay_pid*.log; true
+        shell: bash
